# Blaze-backup

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: CI.yml  Master-MacOS.yml  Master-Ubuntu.yaml  Master-Windows.yaml  (+1 more)
Blaze/Editor/: CMakeLists.txt
Blaze/Editor/private/: main.cpp
Blaze/Engine/: CMakeLists.txt
Blaze/Engine/Base/: CMakeLists.txt
Blaze/Engine/Base/include/Blaze/Engine/Base/: Vector3.hpp  Vector4.hpp  types.hpp  vector2.hpp
Blaze/Engine/Base/src/: app.cpp
Blaze/Engine/Base/src/Types/: Vector2.cpp  Vector3.cpp  Vector4.cpp
Blaze/Engine/Base/test/: CMakeLists.txt  test.cpp
Blaze/Engine/Base/test/Types/: test_base_types.cpp  test_types.cpp  test_vector2.cpp  test_vector3.cpp  test_vector4.cpp
Blaze/Engine/Core/: CMakeLists.txt
Blaze/Engine/Core/include/Blaze/Engine/Core/Application/: Application.hpp  Context.hpp  ISystem.hpp  Pipeline.hpp
Blaze/Engine/Core/include/Blaze/Engine/Core/Common/: constants.hpp
Blaze/Engine/Core/include/Blaze/Engine/Core/Component/: ComponentManager.hpp
Blaze/Engine/Core/include/Blaze/Engine/Core/Configuration/: EngineConfiguration.hpp
Blaze/Engine/Core/include/Blaze/Engine/Core/DataStructures/: SparseSet.hpp
Blaze/Engine/Core/include/Blaze/Engine/Core/DesignPatterns/: ServiceLocator.hpp
Blaze/Engine/Core/include/Blaze/Engine/Core/Entity/: Entity.hpp  EntityManager.hpp  PoolData.hpp  entity.hpp
Blaze/Engine/Core/include/Blaze/Engine/Core/Logging/: ConsoleLogger.hpp  IConsoleLoggerAdapter.hpp
Blaze/Engine/Core/include/Blaze/Engine/Core/Math/: FloatVector2.hpp  FloatVector3.hpp  FloatVector4.hpp  IntVector2.hpp  IntVector3.hpp  IntVector4.hpp  Matrix4X4.hpp
Blaze/Engine/Core/include/Blaze/Engine/Core/Time/: CalenderClock.hpp  Clock.hpp  StopWatch.hpp  Timer.hpp
Blaze/Engine/Core/include/Blaze/Engine/Core/Types/: HashedString.hpp  TypeIdentifier.hpp  base_types.hpp  fnv1a_hash.hpp
Blaze/Engine/Core/include/Blaze/Engine/Core/Window/: IWindow.hpp  IWindowFactoryAdapter.hpp  WindowComponent.hpp  WindowFactory.hpp  WindowSpecification.hpp  WindowSystem.hpp
Blaze/Engine/Core/include/Blaze/Engine/SpdlogWrapper/: CMakeLists.txt
Blaze/Engine/Core/private/Application/: Application.cpp  Pipeline.cpp
Blaze/Engine/Core/private/Component/: ComponentManager.cpp  TypeIdentifier.cpp
Blaze/Engine/Core/private/Logging/: ConsoleLogger.cpp
Blaze/Engine/Core/private/Math/: FloatVector2.cpp  FloatVector3.cpp  FloatVector4.cpp  IntVector2.cpp  IntVector3.cpp  IntVector4.cpp  Matrix4X4.cpp
Blaze/Engine/Core/private/Time/: CalenderClock.cpp  Clock.cpp  StopWatch.cpp  Timer.cpp
Blaze/Engine/Core/private/Window/: WindowFactory.cpp  WindowSystem.cpp
Blaze/Engine/Core/test/: CMakeLists.txt
Blaze/Engine/Core/test/Component/: test_TypeIdentifier.cpp
Blaze/Engine/Core/test/DataStructures/: test_SparseSet.cpp
Blaze/Engine/Core/test/DesignPatterns/: test_ServiceLocator.cpp
Blaze/Engine/Core/test/Entity/: test_EntityManager.cpp
Blaze/Engine/Core/test/Logging/: mock_ConsoleLoggerAdapter.cpp  mock_ConsoleLoggerAdapter.hpp  test_ConsoleLogger.cpp
Blaze/Engine/Core/test/Math/: test_FloatVector2.cpp  test_FloatVector3.cpp  test_FloatVector4.cpp  test_IntVector2.cpp  test_IntVector3.cpp  test_IntVector4.cpp  test_Matrix4X4.cpp  test_utilities.cpp
Blaze/Engine/Core/test/Types/: test_HashedString.cpp  test_TypeIdentifier.cpp  test_base_types.cpp  test_fnv1a_hash.cpp
Blaze/Engine/Graphics/: CMakeLists.txt
Blaze/Engine/Graphics/include/Blaze/Engine/Graphics/: GraphicComponent.hpp  GraphicSystem.hpp
Blaze/Engine/Graphics/include/Blaze/Engine/Graphics/Context/: GraphicContextFactory.hpp  GraphicSpecification.hpp  IGraphicContext.hpp  IGraphicContextFactoryAdapter.hpp
Blaze/Engine/Graphics/private/: GraphicSystem.cpp
Blaze/Engine/Graphics/private/Context/: GraphicContextFactory.cpp
Blaze/Engine/Math/: CMakeLists.txt
Blaze/Engine/Math/include/Blaze/Engine/Math/: IntVector2.hpp  base_types.hpp  utilities.hpp
Blaze/Engine/Math/include/Blaze/Engine/Math/Types/: FloatVector2.hpp  FloatVector3.hpp  FloatVector4.hpp  IntVector2.hpp  IntVector3.hpp  IntVector4.hpp  Matrix4X4.hpp  base_types.hpp
Blaze/Engine/Math/private/: IntVector2.cpp
Blaze/Engine/Math/private/Types/: FloatVector2.cpp  FloatVector3.cpp  FloatVector4.cpp  IntVector2.cpp  IntVector3.cpp  IntVector4.cpp  Matrix4X4.cpp
Blaze/Engine/Math/test/: CMakeLists.txt  test_base_types.cpp  test_utilities.cpp
Blaze/Engine/Math/test/Types/: test_FloatVector2.cpp  test_FloatVector3.cpp  test_FloatVector4.cpp  test_IntVector2.cpp  test_IntVector3.cpp  test_IntVector4.cpp  test_Matrix4X4.cpp  test_base_types.cpp
Blaze/Engine/PlatformDirectX12/: CMakeLists.txt
Blaze/Engine/PlatformDirectX12/include/Blaze/Engine/PlatformDirectX12/: DX12CommandAllocatorFactory.hpp  DX12CommandListFactory.hpp  DX12CommandQueueFactory.hpp  DX12DXGIFactoryFactory.hpp  DX12DebugController.hpp  DX12DescriptorHeapFactory.hpp  DX12Device.hpp  DX12DeviceFactory.hpp  DX12FeatureChecker.hpp  DX12Fence.hpp  DX12FenceEventFactory.hpp  DX12FenceFactory.hpp  DX12GraphicContext.hpp  DX12GraphicContextFactoryAdapter.hpp  DX12SwapChainFactory.hpp  common.hpp
Blaze/Engine/PlatformDirectX12/private/: DX12CommandAllocatorFactory.cpp  DX12CommandListFactory.cpp  DX12CommandQueueFactory.cpp  DX12DXGIFactoryFactory.cpp  DX12DebugController.cpp  DX12DescriptorHeapFactory.cpp  DX12Device.cpp  DX12DeviceFactory.cpp  DX12FeatureChecker.cpp  DX12Fence.cpp  DX12FenceEventFactory.cpp  DX12FenceFactory.cpp  DX12GraphicContext.cpp  DX12GraphicContextFactoryAdapter.cpp  DX12SwapChainFactory.cpp
Blaze/Engine/PlatformWindows/: CMakeLists.txt
Blaze/Engine/PlatformWindows/include/Blaze/Engine/PlatfowmWindows/: Win32Window.hpp  Win32WindowFactoryAdapter.hpp  constants.hpp
Blaze/Engine/PlatformWindows/private/: Win32Window.cpp  Win32WindowFactoryAdapter.cpp
Blaze/Engine/SpdLog/: CMakeLists.txt
Blaze/Engine/SpdLog/include/Blaze/Engine/SpdLog/: ConsoleLoggerAdapter_SpdLog.hpp
Blaze/Engine/SpdLog/private/: ConsoleLoggerAdapter_SpdLog.cpp
cmake/: StandardProjectSettings.cmake
